# book_luc-cs-systems-handbook

./: .buildinfo  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  config.toml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/department_services/: academic_alliances.doctree  content_management.doctree  durian_gpgpu_server.doctree  facilities.doctree  google_apps.doctree  people.doctree  user_accounts.doctree  virtualization.doctree
.doctrees/dijkstra/: system_administration.doctree
.doctrees/how_to/: command_line_basics.doctree  getting_help.doctree  remote_access.doctree  secure_shell.doctree
.doctrees/its_services/: printing.doctree  vpn.doctree  windows_desktop_support.doctree  windows_labs.doctree  wireless.doctree
.github/workflows/: build.yml  ghpages.yml
_sources/department_services/: academic_alliances.rst.txt  content_management.rst.txt  facilities.rst.txt  user_accounts.rst.txt
_sources/how_to/: getting_help.rst.txt  secure_shell.rst.txt
_sources/its_services/: printing.rst.txt  vpn.rst.txt  windows_desktop_support.rst.txt  windows_labs.rst.txt
content/en/: _index.html  search.md
content/fa/: _index.html  search.md
content/no/: _index.html  search.md
department_services/: academic_alliances.html  content_management.html  durian_gpgpu_server.html  facilities.html  google_apps.html  people.html  user_accounts.html  virtualization.html
dijkstra/: system_administration.html
dijkstra/adminstration_guides/: software_bill_of_materials.html  system_descriptions.html
docs/: conf.py  index.rst
docs/adr/: ADR_1_use-sphinx.md
docs/department_services/: content_management.rst  virtualization.rst
how_to/: command_line_basics.html  getting_help.html  remote_access.html  secure_shell.html
its_services/: printing.html  vpn.html  windows_desktop_support.html  windows_labs.html  wireless.html
scripts/: getDijkstraNodesList.bash  getDijkstraNodes_dmiencode.bash  getDijkstraNodes_hostnamectl.bash  getDijkstraNodes_lshw.bash
src/: conf.py
(+171 files in other folders)
