[tool.poetry]
name = "src"
version = "0.1.12"
description = "Hello World"
license = "GNU Affero"
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/NicholasSynovic/template_python"
repository = "https://github.com/NicholasSynovic/template_python"
keywords = ["Template"]
classifiers = ["Development Status :: 1 - Planning"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
sphinx = "^8.2.1"
sphinx-rtd-theme = "^3.0.2"
ghp-import = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
