[project]
name = "src"
version = "0.1.14"
description = "Hello World"
authors = [{ name = "Nicholas M. Synovic", email = "nicholas.synovic@gmail.com" }]
requires-python = ">=3.13,<4.0"
readme = "README.md"
keywords = ["Sphinx Site", "Loyola University Chicago"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "sphinx>=8.2.1,<9",
    "sphinx-rtd-theme>=3.0.2,<4",
    "ghp-import>=2.1.0,<3",
]

[project.urls]
Homepage = "https://systemshandbook.cs.luc.edu/"
Repository = "https://github.com/LoyolaChicagoBooks/systems-handbook-hugo"

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
